[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"


[project]
name = "tawazi"
version = "0.3.0"
description = "This library helps you execute a set of functions in a Directed Acyclic Graph (DAG) dependency structure in parallel in a production environment."
authors = [{name = "Mindee", email = "contact@mindee.com"}]
maintainers = [
    {name = "Bashir Abdel Wahed"},
    {name = "Matthias Cremieux"}
]
license = {file = "LICENSE" }
readme = "README.md"
requires-python=">=3.7,<4"
dependencies = [
    "networkx>=2,<4",
    "pydantic>=1.0",
    "loguru",
    "PyYaml>=6",
    "typing_extensions>=3.10"
]

[project.optional-dependencies]
dev = [
    "matplotlib>=3.5.3",
    "pytest>=7.1.2",
    "pytest-cov>=4.0.0",
    "pytest-codeblocks"
]

doc = [
    "mkdocs>=1.4.0",
    "mike==1.1.2",
    "mkdocs-exclude==1.0.2",
    "mkdocs-material==9.1.15",
    "mkdocstrings-python"
]

[tool.pytest.ini_options]
addopts = "--pdbcls=IPython.terminal.debugger:TerminalPdb --cov-report=term-missing:skip-covered --junit-xml=pytest-junit.xml --cov=tawazi"

[tool.mypy]
python_version = "3.8"
# --strict
disallow_any_generics = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
implicit_reexport = false
strict_equality = true
# --strict end

[[tool.mypy.overrides]]
module = "matplotlib.*,networkx.*,yaml.*"
ignore_missing_imports = true

[tool.black]
skip-magic-trailing-comma = true
line-length = 100


[tool.ruff]
# Use of assert detected
ignore = ["E501", "S101"]
src = ["src"]
line-length = 100
target-version = "py38"
select = [
    "B",
    "D",
    "E",
    "F",
    "I",
    "N",
    "PGH",
    "UP",
    "S",
    "T20",
    "TID",
    "W",
    "RET"
]

[tool.ruff.per-file-ignores]
"tests/*.py" = ["D"]
"scripts/*.py" = ["D", "PGH"]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "parents"

[tool.ruff.pydocstyle]
convention = "google"
